fix flickering of items after append

--- a/css/site.styl
+++ b/css/site.styl
@@ -152,6 +152,9 @@ img
 
 // POSTS LOOP
 
+.feed-item
+  transition: opacity $animation-speed-basic
+
 .feed-item-holder
   position: relative
   display: inline-block
